# sounds-right

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Kendrick Lamar - squabble up (Official Audio).txt  Makefile  PROJECT_CONTEXT.md  README.md  app.py  celery_app.py  celery_config.py  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  tasks.py
app/: app.py
apps/api/: pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_create_migration_health_table.py  002_create_domain_tables.py  003_create_event_flow_tables.py  004_create_review_workflow.py  005_create_publications.py
apps/api/src/sounds_right_api/: __init__.py  config.py  health.py  main.py
apps/api/src/sounds_right_api/auth/: security.py
apps/api/src/sounds_right_api/db/: base.py  session.py
apps/api/src/sounds_right_api/domain/schemas/: __init__.py  artists.py  auth.py  common.py  jobs.py  publications.py  review.py  tracks.py  transcripts.py  versions.py
apps/api/src/sounds_right_api/events/: __init__.py  producer.py  projector.py
apps/api/src/sounds_right_api/models/: __init__.py  domain.py
apps/api/src/sounds_right_api/routes/: artists.py  auth.py  jobs.py  publications.py  review.py  tracks.py  versions.py
apps/api/src/sounds_right_api/services/: artists.py  auth.py  jobs.py  review.py  slug.py  tracks.py  versions.py
apps/api/src/sounds_right_api/services/publications/: __init__.py  artifacts.py  errors.py  permissions.py  queries.py  serializers.py  service.py
apps/api/src/sounds_right_api/storage/: minio_client.py
apps/api/tests/: test_event_schemas.py  test_publication_service.py  test_review_service.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/sounds_right_worker/: __init__.py  config.py  errors.py  health.py  logging.py  main.py
apps/worker/src/sounds_right_worker/audio/: ffmpeg.py  ffprobe.py  validation.py
apps/worker/src/sounds_right_worker/events/: __init__.py  consumer.py  producer.py  schemas.py
apps/worker/src/sounds_right_worker/jobs/: cleanup.py  pipeline.py  pipeline_events.py  tempdir.py
apps/worker/src/sounds_right_worker/storage/: minio_client.py  object_keys.py
apps/worker/src/sounds_right_worker/transcription/: engine.py  manifest.py  parser.py  schemas.py  whisper_cpp.py
apps/worker/tests/: test_audio_validation.py  test_manifest.py  test_mock_processing.py  test_object_keys.py  test_transcript_parser.py
container/: config.py  container.py
controller/: artist.py  auth_controller.py  transcription.py
database/: connection.py
docs/: architecture.md  events.md  transcript-schema.md  transcription-worker.md
experiments/: looper.py
formatter/: api_response_formatter.py
middleware/: __init__.py
repository/: storage_repository.py
router/: artist_router.py  auth_router.py  base_router.py  router.py  transcription_router.py  user_router.py
scripts/: lint.py  services.py  worker.sh  workers.py
service/: transcription_service.py  (+1 more)
(+95 files in other folders)
