[tool.poetry]
name = "sounds_right"
version = "1.0.0"
description = "A tool for transcribing and analyzing audio"
authors = ["Oskar Wichtowski <oskar.wichtowski3@gmail.com>"]
packages = [
    { include = "container" },
    { include = "controller" },
    { include = "core" },
    { include = "database" },
    { include = "middleware" },
    { include = "repository" },
    { include = "router" },
    { include = "scripts" },
    { include = "service" },
    { include = "transcriber" }
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
celery = "^5.3.0"
redis = "^5.0.0"
pika = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-services = "scripts.services:start_services"
stop-services = "scripts.services:stop_services"
celery-worker = "scripts.workers:start_worker"
lint = "scripts.lint:run_linters"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
    \.git
    | \.mypy_cache
    | \.venv
    | venv
    | build
    | dist
    | migrations
    | google.*
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip = [
    ".git",
    ".mypy_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations",
    "google*"
] 