[project]
name = "sounds-right-api"
version = "0.1.0"
description = "Sounds Right Litestar API"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.10.0",
    "alembic>=1.13.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.29.0",
    "email-validator>=2.3.0",
    "litestar[standard]>=2.10.0",
    "minio>=7.2.7",
    "pydantic-settings>=2.3.4",
    "pyjwt>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.31",
]

[dependency-groups]
dev = [
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.4",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["sounds_right_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
