[project]
name = "sounds-right-worker"
version = "0.1.0"
description = "Sounds Right worker placeholder"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.10.0",
    "minio>=7.2.7",
    "pydantic-settings>=2.3.4",
]

[dependency-groups]
dev = [
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "ruff>=0.5.4",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["sounds_right_worker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
